--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ remote_theme: openlumi/wiki
 baseurl: "/releases"
 
 minima:
+  search_path: /releases/search.html
   social_links:
     telegram: xiaomi_gw_hack
     github: openlumi
